--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,6 @@
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
     </script>
-    <!-- Built by Werewolf Graphics. Good taste with every byte. -->
+    <!-- Built by Werewolf Graphics. Good taste with every byte! -->
   </body>
 </html>
