--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="Werewolf Graphics, Design Proposal.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Werewolf Graphics</title>
+    <title>Werewolf Graphics | Design Proposal</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -35,7 +35,7 @@
     <header class="app-bar promote-layer">
       <div class="app-bar-container">
         <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
-        <h1 class="logo">Web Starter Kit</h1>
+        <h1 class="logo">Werewolf Graphics</h1>
         <section class="app-bar-actions">
         <!-- Put App Bar Buttons Here -->
         </section>
@@ -52,18 +52,19 @@
     </nav>
 
     <main>
-      <h1 id="hello">Hello!</h1>
-      <p>Welcome to Web Starter Kit.</p>
-
-      <h2 id="get-started">Get Started.</h2>
-      <p>Read how to <a href="http://developers.google.com/web/starter-kit">Get Started</a> or check out the <a href="styleguide/index.html">Style Guide</a>.</p>
+      <h2 id="get-started">Copyright Notice.</h2>
+      <p>By clicking on the image below you agree to the following terms and conditions.</p>
+<p>Werewolf Graphics retains full ownership of design concepts and materials it produces. Once a final concept is delivered to a client and full payment is received, complete ownership rights to the concept transfer to the client. Unused concepts remain the property of Werewolf Graphics. Unless the client requests otherwise, Werewolf Graphics retains the right to display a small byline claiming design credit on works it produces, except for corporate stationery. Werewolf Graphics may still use paid-for concepts in its promotional materials and in its design portfolio.</p>
+<p>This granting of copyright does not extend to the use of design proposals and concepts submitted to but not approved for the work outlined. Until final payment, Werewolf Graphics retains ownership of all artwork, website architecture, style sheets, scripts and other related documents. Werewolf Graphics reserve the rights to certain elements used to create your images including fonts, patterns, stock images, textures, colour palettes and other non-exclusive items.</p>
+<p>Other than for the promotional use of Werewolf Graphics, all services provided shall be for the exclusive use of the client’s said purposes only. Designs may not be used for other promotional items, websites or printed materials without permission. Upon payment of all invoices, reproduction rights for all approved final designs created by Werewolf Graphics shall be outlined in the Project Proposal. For additional usage, price will be assessed as needed. In accordance with the Australian Copyright Act (1968), ‘licensing of copyright is subject to a mutual agreement made between client and designer’.</p> 
+<p>Copyright will remain property of Werewolf Graphics till such time an agreement is in place. As part of Werewolf Graphics terms of business, the copyright license is automatically released to the client on receipt of final payment for the commissioned work. Werewolf Graphics reserve the right to use all artwork produced, concepts produced in the course of the project (including those concepts not selected) and revisions for the purposes of promoting Werewolf Graphics in print or digital media portfolios, social media and blogs, except where the client has specifically requested in writing otherwise.</p></p>
     </main>
 
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!-- Google Analytics. Can't live without it! -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
